Search button implemented

--- a/app/src/app/search/search.component.html
+++ b/app/src/app/search/search.component.html
@@ -2,3 +2,4 @@
   <input name="user-story-number" placeholder="User Story nummer" [ngModel]="searchTerm" (ngModelChange)="searchTerm = $event">
   <input type="submit" value="Søg" (click)="search()">
 </form>
+<app-user-story [id]="emitter"></app-user-story>
