--- a/app/src/app/user-story/user-story.component.html
+++ b/app/src/app/user-story/user-story.component.html
@@ -1,3 +1,3 @@
-<h1>User story: {{ userStory?.key }}</h1>
+<h1>User story: {{ userStory?.key }} {{ userStory?.fields.summary }}</h1>
 
 <p *ngFor="let link of (userStory?.fields?.issuelinks)">{{ link.self }}</p>
