Added example force graph

--- a/app/src/app/user-story/user-story.component.html
+++ b/app/src/app/user-story/user-story.component.html
@@ -4,4 +4,4 @@
   <li *ngFor="let link of userStory?.fields.issuelinks">{{ link.self }}</li>
 </ul>
 
-<div id="rect"></div>
+<div id="graph"></div>
